--- a/MID/index - grafic.html
+++ b/MID/index - grafic.html
@@ -55,8 +55,8 @@
                 התבקשנו להכין פוסטר חדש מתמונות של סרט שכבר יצא לקולנוע . הפוסטר צריך להיות שונה מהפוסטר המקורי של הסרט אך חייב לשמור על אותו הסטייל. העבודה נעשתה על תוכנת photoshop
                 </section>
         <div id="devin">
-            <a href="styles/imag/.moviePosterNew_SHIR DYKAN.jpg"target="_blank">
-                <img class="de" src="styles/imag/.moviePosterNew_SHIR DYKAN.jpg" />
+            <a href="styles/imag/moviePosterNew.jpg"target="_blank">
+                <img class="de" src="styles/imag/moviePosterNew.jpg" />
             </a>
             <p class="big">
                 יש ללחוץ על התמונה להגדלה
