--- a/MID/index.html
+++ b/MID/index.html
@@ -16,10 +16,12 @@
     <!-- Scripts -->
     <script src="jScripts/jquery-1.12.0.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Secular+One|Suez+One" rel="stylesheet">
 
 </head>
 <body>
     <div id="container">
+        <article>
         <nav>
             <ul>
                 <li> <a class="stay" href=index.html> דף הבית </a> </li>
@@ -28,18 +30,20 @@
                 <li> <a href="index - grafic.html"> גרפיקה ממוחשבת </a> </li>
             </ul>
         </nav>
-        <p class="pic">
+            
+        <div class="pic">
 
-        </p>
-        
-            <h1>
-                ברוכים הבאים לתיק העבודות שלי!
-            </h1>
-        <p class="first">
-            באתר ניתן לצפות בתוצרי השונים מלימודי "טכנולוגיות למידה" שנה א'  במכון הטכנולוגי חולון.
-            בהמשך יעלו תוצרים חדשים מוזמנים להישאר מעודכנים!
+        </div>
+            <section>
+                <h1>
+                    ברוכים הבאים לתיק העבודות שלי!
+                </h1>
+                <p class="first">
+                    באתר ניתן לצפות בתוצרי השונים מלימודי "טכנולוגיות למידה" שנה א'  במכון הטכנולוגי חולון. מוזמנים לעבור בין הדפים השונים לראות מבחר קטן של עבודות.
+                    בהמשך יעלו תוצרים חדשים מוזמנים להישאר מעודכנים.
 
-        </p>
+                </p>
+            </section>
         <div class="kesher">
             צור קשר<br>
             שיר דייקן-
@@ -55,7 +59,7 @@
                 <img class="face" src="styles/imag/f2-01.png" /> 
             </a>
         </div>
-
+</article>
     </div>
 </body>
 </html>
